# HOMEWORK_Sor

./: README.md
LU2IN002_JAVA/ZRL_JAVA_PROJECT/: Boissons.java  Client.java  Dessert.java  Entree.java  Estimer.java  Menu.java  ObjectVideException.java  Plat.java  PlatChaud.java  PlatFroid.java  Restaurant.java  SansEspaceException.java  Table.java  TestRestaurant.java  WrongObjectException.java
LU2IN005-MathDiscrete/: automate.py
LU2IN005-MathDiscrete/Partie2/: auto.txt  automate.py  montest.py  test.py
LU2IN005-MathDiscrete/Partie3,4,5/: automate.py  automateBase.py  exempleAutomate.txt  montest.py  myparser.py  state.py  transition.py
LU2IN006-StructDonnees/ProjectLong/: command_7_8.txt  commande.txt  (+16 more)
LU3IN025-AI_Jeux/: 3-premier_choix.lp
LU3IN033-Res/: MApeiran_ZHOUrunlin.ipynb  analyse.py  classifieur.py  getInformation.sh  information.txt  makefile  readme.md  test.py  transforme.py
MU4IN400-PSCR/: README.md
MU4IN400-PSCR/TME9/src/: IChatRoom.h  MTChatRoom.h  Makefile.am  TextChatRoom.h  clientchat.cpp  serverchat.cpp
MU4IN402-PNL_projet/: Makefile  README.md  command.h  file.c  ouichefs.h  super.c
MU4IN404-SRCS/: README.md
MU4IN405-PSAR/: README.md
MU4IN901-MODEL/: benchmark_results.csv  comparison.c  makefile  readme.md  test.c  traceGraph.py
MU5IN450-ARA_project/: README.md
MU5IN952-HPCA/: PDE-2.cu
MUIN500-ALGAV-projet/: ArbreRecherche.py  fileBinomiale.py  readme.md  setKey.py  tabHachage.py  tasPriorite.py  test.py  utils.py
TME8_webAPI/: crontabForMySearchEngine  mySearchEngineDataRefresh.sh
TME9/: build.xml  input.points
(+1144 files in other folders)
